<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smart.refresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/smartrefreshlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:srlEnablePureScrollMode="true"
    tools:ignore="MissingPrefix">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_user_info"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@color/white">

                <com.jason.www.widget.CircleImageView
                    android:id="@+id/civ_user_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_avatar" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/civ_user_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_large"
                    android:textColor="@color/textcolor_black"
                    android:textSize="@dimen/textsize_xxlarge"
                    android:textStyle="bold"
                    tools:text="Jason" />

                <TextView
                    android:id="@+id/tv_user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_user_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/textcolor_black"
                    android:textSize="@dimen/textsize_middle"
                    tools:text="ID:-----" />

                <LinearLayout
                    android:id="@+id/ll_user_level_ranking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_user_id"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_small"
                    android:alpha="0.8">

                    <TextView
                        android:id="@+id/tv_user_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textcolor_black"
                        android:textSize="@dimen/textsize_middle"
                        tools:text="等级：15" />

                    <TextView
                        android:id="@+id/tv_user_ranking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:textColor="@color/textcolor_black"
                        android:textSize="@dimen/textsize_middle"
                        tools:text="排名：71" />

                </LinearLayout>

            </RelativeLayout>

            <include layout="@layout/divider_line_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_coin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_xlarge"
                    android:paddingRight="@dimen/padding_xlarge"
                    app:bl_pressed_solid_color="@color/pressed_bg_color"
                    app:bl_unPressed_solid_color="@color/unpressed_bg_color">

                    <ImageView
                        android:layout_width="@dimen/ic_symbol_width"
                        android:layout_height="@dimen/ic_symbol_height"
                        android:scaleType="centerInside"
                        android:src="@drawable/integral" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:text="@string/my_integral"
                        android:textColor="@color/textcolor_black"
                        android:textSize="@dimen/textsize_middle" />

                    <TextView
                        android:id="@+id/tv_coin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textcolor_light_grey"
                        android:textSize="@dimen/textsize_small"
                        tools:text="520" />

                </LinearLayout>

                <include layout="@layout/divider_line_horizontal" />

                <LinearLayout
                    android:id="@+id/ll_share"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_large"
                    android:paddingRight="@dimen/padding_large"
                    app:bl_pressed_solid_color="@color/pressed_bg_color"
                    app:bl_unPressed_solid_color="@color/unpressed_bg_color">

                    <ImageView
                        android:layout_width="@dimen/ic_symbol_width"
                        android:layout_height="@dimen/ic_symbol_height"
                        android:scaleType="centerInside"
                        android:src="@drawable/share" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:text="@string/my_share"
                        android:textColor="@color/textcolor_black"
                        android:textSize="@dimen/textsize_middle" />

                    <ImageView
                        android:layout_width="@dimen/ic_arrow_width"
                        android:layout_height="@dimen/ic_arrow_height"
                        android:scaleType="centerInside"
                        android:src="@drawable/arrow_gray" />
                </LinearLayout>

                <include layout="@layout/divider_line_horizontal" />

                <LinearLayout
                    android:id="@+id/ll_collect"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_large"
                    android:paddingRight="@dimen/padding_large"
                    app:bl_pressed_solid_color="@color/pressed_bg_color"
                    app:bl_unPressed_solid_color="@color/unpressed_bg_color">

                    <ImageView
                        android:layout_width="@dimen/ic_symbol_width"
                        android:layout_height="@dimen/ic_symbol_height"
                        android:scaleType="centerInside"
                        android:src="@drawable/collection" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:text="@string/my_collection"
                        android:textColor="@color/textcolor_black"
                        android:textSize="@dimen/textsize_middle" />

                    <ImageView
                        android:layout_width="@dimen/ic_arrow_width"
                        android:layout_height="@dimen/ic_arrow_height"
                        android:scaleType="centerInside"
                        android:src="@drawable/arrow_gray" />
                </LinearLayout>

                <include layout="@layout/divider_line_horizontal" />

                <LinearLayout
                    android:id="@+id/ll_read_record"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_large"
                    android:paddingRight="@dimen/padding_large"
                    app:bl_pressed_solid_color="@color/pressed_bg_color"
                    app:bl_unPressed_solid_color="@color/unpressed_bg_color">

                    <ImageView
                        android:layout_width="@dimen/ic_symbol_width"
                        android:layout_height="@dimen/ic_symbol_height"
                        android:scaleType="centerInside"
                        android:src="@drawable/history" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:text="@string/reading_history"
                        android:textColor="@color/textcolor_black"
                        android:textSize="@dimen/textsize_middle" />

                    <ImageView
                        android:layout_width="@dimen/ic_arrow_width"
                        android:layout_height="@dimen/ic_arrow_height"
                        android:scaleType="centerInside"
                        android:src="@drawable/arrow_gray" />
                </LinearLayout>

                <include layout="@layout/divider_line_horizontal" />

                <LinearLayout
                    android:id="@+id/ll_about_me"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_large"
                    android:paddingRight="@dimen/padding_large"
                    app:bl_pressed_solid_color="@color/pressed_bg_color"
                    app:bl_unPressed_solid_color="@color/unpressed_bg_color">

                    <ImageView
                        android:layout_width="@dimen/ic_symbol_width"
                        android:layout_height="@dimen/ic_symbol_height"
                        android:scaleType="centerInside"
                        android:src="@drawable/about" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:text="@string/about_author"
                        android:textColor="@color/textcolor_black"
                        android:textSize="@dimen/textsize_middle" />

                    <TextView
                        android:id="@+id/tv_but_him_a_cup_of_coffee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_him_a_cup_of_coffee"
                        android:textColor="@color/textcolor_light_grey"
                        android:textSize="@dimen/textsize_small"
                        app:bl_pressed_textColor="@color/pressed_text_color"
                        app:bl_unPressed_textColor="@color/textcolor_light_grey" />

                </LinearLayout>

                <include layout="@layout/divider_line_horizontal" />

                <LinearLayout
                    android:id="@+id/ll_setting"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_large"
                    android:paddingRight="@dimen/padding_large"
                    app:bl_pressed_solid_color="@color/pressed_bg_color"
                    app:bl_unPressed_solid_color="@color/unpressed_bg_color">

                    <ImageView
                        android:layout_width="@dimen/ic_symbol_width"
                        android:layout_height="@dimen/ic_symbol_height"
                        android:scaleType="centerInside"
                        android:src="@drawable/setting" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:text="@string/system_settings"
                        android:textColor="@color/textcolor_black"
                        android:textSize="@dimen/textsize_middle" />

                    <ImageView
                        android:layout_width="@dimen/ic_arrow_width"
                        android:layout_height="@dimen/ic_arrow_height"
                        android:scaleType="centerInside"
                        android:src="@drawable/arrow_gray" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_login_out"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/login_out"
                android:textColor="@color/textcolor_black"
                android:textSize="@dimen/textsize_middle"
                app:bl_pressed_solid_color="@color/pressed_bg_color"
                app:bl_unPressed_solid_color="@color/unpressed_bg_color" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</com.scwang.smart.refresh.layout.SmartRefreshLayout>